 * common/http_func.c: do not use function strsep because strsep is not portable
 * client upload file support callback function
 * client support multi tracker groups (multi FastDFS clusters)
 * bug fixed: thread_stack_size not correct when the param thread_stack_size 
   not set in the config file
 * supply php extension (directory name: php_client)

Version 1.21  2009-09-19
 * bug fixed: when source storage server synced file to new storage server done,
   it's status changed to ONLINE (should keep as ACTIVE, report by zhouzezhong)
 * add thread_stack_size in config file, default value is 1MB (report by chhxo)
 * tracker and storage server use setsockopt to keep alive 
   (report by zhouzezhong)
 * bug fixed: storage server with multi-path, upload file fail when the free 
   space of each path <= reserved space (the total free space > reserved space,
   report by zhouzezhong)
 * storage_sync.c: when connect fail, do not change the dest storage server '
   status to offline
 * tracker_service.c and storage_service.c change log level from WARNING to DEBUG 
   when client connection disconnected (report by Jney402)
 * bug fixed: tracker_client.c correct store_path_index return by tracker server
   (report by happy_fastdfs)
 * bug fixed: tracker_service.c when store_lookup set to 2 (load balance), use 
   another pthread lock to avoid long time lock waiting
   (report by happy_fastdfs)
 * add service shell scripts in directory: init.d 
   (services will auto installed on Linux, report by hugwww)

Version 1.20  2009-09-05
 * base64 use context, functions changed
 * common/ini_file_reader.c: fix memory leak
 * tracker server support HTTP protocol, one thread mode
 * storage server support HTTP protocol, one thread mode
 * fix bug: storage server rebuild, auto sync data correctly
 * fix bug: sync data fail (correct storage server status)
 * when storage server idle time exceeds check_active_interval seconds, 
   set it's status to offline